<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.ProductsDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:visibility="gone"
            android:id="@+id/products_detail_card_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="products_detail_fragment_card_exp,products_detail_fragment_card_grade,products_detail_fragment_card_patients"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/products_detail_fragment_image"
            android:layout_width="370dp"
            android:layout_height="220dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            tools:src="@drawable/ch_frutos_rojos"
            android:scaleType="fitXY"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/products_detail_fragment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_image"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:fontFamily="@font/lato_bold"
            tools:text="Ch. frutos rojos"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/products_detail_fragment_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_name"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:fontFamily="@font/lato"
            android:textColor="@color/primaryLight"
            tools:text="Postre"/>

        <RatingBar
            android:id="@+id/products_detail_fragment_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_category"
            android:isIndicator="true"
            android:numStars="5"
            tools:rating="4"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/products_detail_fragment_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_rating"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:fontFamily="@font/lato_bold"
            android:text="@string/about_us"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/products_detail_fragment_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_description_title"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato"
            tools:text="Delicioso cheesecake a base de queso y galleta, acompañado con salsa de frutos rojos."/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/products_detail_fragment_card_patients"
            android:layout_marginVertical="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/products_detail_fragment_card_patients"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/products_detail_fragment_card_patients_cal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/primaryLight"
                    tools:text="15k+"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/products_detail_fragment_card_patients_cal_two"
                    app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_card_patients_cal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/bought"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/products_detail_fragment_card_grade"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_description"
            app:layout_constraintStart_toEndOf="@id/products_detail_fragment_description"
            app:layout_constraintEnd_toStartOf="@id/products_detail_card_group"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/products_detail_fragment_card_grade_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/primaryLight"
                    tools:text="4,5"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

                <RatingBar
                    android:id="@+id/products_detail_fragment_card_grade_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="17dp"
                    android:isIndicator="true"
                    android:numStars="1"
                    android:layout_marginVertical="6dp"
                    app:layout_constraintStart_toEndOf="@id/products_detail_fragment_card_grade_name"
                    app:layout_constraintTop_toBottomOf="@id/product_detail_fragment_card_grade_calification"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:rating="1" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/product_detail_fragment_card_grade_calification"
                        app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_card_grade_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/grade"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/products_detail_fragment_card_exp"
            android:layout_marginVertical="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/products_detail_fragment_description"
            app:layout_constraintStart_toEndOf="@id/products_detail_fragment_name"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/product_detail_fragment_card_exp_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/primaryLight"
                    tools:text="6yrs+"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/product_detail_fragment_card_exp_label"
                    app:layout_constraintTop_toBottomOf="@id/product_detail_fragment_card_exp_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/exp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>